[package]
name = "spaceship-game"
version = "0.1.0"
edition = "2021"

[lib]
name = "spaceship"
path = "./lib/spaceship/lib.rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
half = "2.3.1"

[dependencies.uuid]
version = "1.6.1"
features = ["v4"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false